# Kali-Mcp-Toolkit

./: Plan.md  README.md  pyproject.toml  task.md
config/: default.yaml  tools_catalog.yaml
deploy/: kalimcp.service
scripts/: install.sh
src/kalimcp/: __init__.py  auth.py  config.py  server.py
src/kalimcp/codeforge/: __init__.py  editor.py  executor.py  workspace.py
src/kalimcp/prompts/: __init__.py  workflows.py
src/kalimcp/resources/: __init__.py  system.py
src/kalimcp/terminal/: __init__.py  ansi.py  listener.py  manager.py  pty_session.py
src/kalimcp/tools/: __init__.py  crypto.py  exploit.py  forensic.py  password.py  post_exploit.py  recon.py  reverse.py  sniff.py  social.py  tool_engine.py  vuln.py  webapp.py  wireless.py
src/kalimcp/utils/: __init__.py  audit.py  parser.py  process.py  sanitizer.py
tests/: conftest.py  test_codeforge.py  test_security.py  test_terminal.py  test_tool_engine.py
